--- a/App-Movil/app/src/main/res/layout/activity_login.xml
+++ b/App-Movil/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
 
         <!--Email-->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/loginTextUsernameLayout"
+            android:id="@+id/loginTextEmailLayout"
             android:layout_width="275dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toBottomOf="@+id/loginLogo">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/loginTextUsernameInput"
+                android:id="@+id/loginTextEmailInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email_hint"
@@ -54,7 +54,7 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginTextUsernameLayout">
+            app:layout_constraintTop_toBottomOf="@+id/loginTextEmailLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/loginTextPasswordInput"
@@ -66,7 +66,7 @@
 
         <!--Forgotten Password-->
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/forgotten_password"
+            android:id="@+id/loginForgottenPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -92,7 +92,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/forgotten_password" />
+            app:layout_constraintTop_toBottomOf="@+id/loginForgottenPassword" />
 
         <!--Register Link-->
         <com.google.android.material.textview.MaterialTextView
