--- a/App-Movil/app/src/main/res/values/colors.xml
+++ b/App-Movil/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorSecondary">#8B528F</color>
+    <color name="primaryTextColor">#FFFF</color>
 </resources>
