--- a/App-Movil/app/src/main/res/layout/activity_home.xml
+++ b/App-Movil/app/src/main/res/layout/activity_home.xml
@@ -20,4 +20,15 @@
 
     </com.google.android.material.textview.MaterialTextView>
 
+    <TextView
+        android:id="@+id/textt_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/profile_label"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
