--- a/App-Movil/app/src/main/res/layout/fragment_task.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_task.xml
@@ -7,22 +7,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.TaskFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/fragmentTaskTitle"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/fragmentTaskToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/label_task"
-            android:textSize="50sp"
-            android:textAllCaps="true"
-            android:textStyle="bold"
+            android:background="@color/colorPrimary"
+            android:elevation="10dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
+            app:title="@string/label_task"
+            app:titleTextColor="@color/primaryTextColor">
+
+            <Button
+                android:id="@+id/fragmentTaskCreateBtn"
+                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="#00FFFFFF"
+                android:checkable="false"
+                android:clickable="false"
+                app:icon="@drawable/ic_add_black_24dp"
+                app:iconTint="#FFFFFF"
+                tools:layout_editor_absoluteX="285dp"
+                tools:layout_editor_absoluteY="4dp" />
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fragmentTaskRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentTaskToolbar"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
