--- a/App-Movil/app/src/main/res/layout/layout_task_item.xml
+++ b/App-Movil/app/src/main/res/layout/layout_task_item.xml
@@ -5,15 +5,17 @@
     android:id="@+id/taskItemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="40dp"
+    android:layout_margin="10dp"
     android:orientation="horizontal">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/taskItemTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text=""
-        android:textSize="20sp"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:gravity="center_vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent"/>
