--- a/App-Movil/app/src/main/res/values/styles.xml
+++ b/App-Movil/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
         <item name="android:minHeight">48dp</item>
     </style>
 
+    <style name="SpinnerTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/bg_spinner</item>
+    </style>
+
 </resources>
