--- a/App-Movil/app/src/main/res/layout/activity_profile.xml
+++ b/App-Movil/app/src/main/res/layout/activity_profile.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_menu_white_24dp">
+            app:navigationIcon="@drawable/ic_arrow_back_white_24dp">
 
             <TextView
                 android:id="@+id/profile_toolbar_title"
@@ -40,9 +40,9 @@
                 android:id="@+id/profile_edit_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_edit_white_24dp"
+                android:layout_gravity="end"
                 android:layout_marginEnd="16dp"
-                android:layout_gravity="end"/>
+                android:src="@drawable/ic_edit_white_24dp" />
 
 
         </androidx.appcompat.widget.Toolbar>
@@ -119,6 +119,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/divider">
 
                 <LinearLayout
+                    android:id="@+id/connect_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
