--- a/App-Movil/app/src/main/res/layout/fragment_home.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_home.xml
@@ -13,69 +13,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/home_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
-
-            <Button
-                android:id="@+id/homeProfileButton"
-                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:background="#00FFFFFF"
-                android:checkable="false"
-                android:clickable="false"
-                app:icon="@drawable/ic_account_circle_black_24dp"
-                app:iconTint="#FFFFFF"
-                tools:layout_editor_absoluteX="285dp"
-                tools:layout_editor_absoluteY="4dp" />
-        </androidx.appcompat.widget.Toolbar>
-
-        <ImageView
-            android:id="@+id/fragmentHomeImageLogo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/logo_arassistant"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/fragmentHomeTaskButton"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="50dp"
             android:text="@string/label_task"
+            android:textSize="30sp"
             app:icon="@drawable/ic_format_list_bulleted_black_24dp"
             app:iconGravity="textStart"
             app:iconSize="50sp"
-            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeImageLogo"/>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/fragmentHomeReminderButton"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="50dp"
             android:text="@string/label_reminder"
             android:textSize="30sp"
             app:icon="@drawable/ic_date_range_black_24dp"
             app:iconGravity="textStart"
             app:iconSize="50sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeTaskButton"/>
+            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeTaskButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
