--- a/App-Movil/app/src/main/res/layout/fragment_task.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_task.xml
@@ -48,6 +48,7 @@
             style="@style/SpinnerTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:entries="@array/arr_categories"
             app:layout_constraintTop_toBottomOf="@+id/fragmentTaskToolbar"
             tools:layout_editor_absoluteX="0dp"/>
 
