--- a/App-Movil/app/src/main/res/layout/activity_edit_profile.xml
+++ b/App-Movil/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.RegisterActivity">
+    tools:context=".activity.EditProfileActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/register_toolbar"
+        android:id="@+id/edit_profile_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -19,28 +19,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_close_white_24dp"
-        app:title="@string/label_create_account"
+        app:title="@string/label_edit_profile"
         app:titleTextColor="@color/primaryTextColor">
 
-    <Button
-        android:id="@+id/register_accept_btn"
-        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:background="#00FFFFFF"
-        android:checkable="false"
-        android:clickable="false"
-        app:icon="@drawable/ic_check_white_24dp"
-        app:iconTint="#FFFFFF"
-        tools:layout_editor_absoluteX="285dp"
-        tools:layout_editor_absoluteY="4dp" />
-
+        <Button
+            android:id="@+id/edit_profile_accept_btn"
+            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="#00FFFFFF"
+            android:checkable="false"
+            android:clickable="false"
+            app:icon="@drawable/ic_check_white_24dp"
+            app:iconTint="#FFFFFF"/>
     </com.google.android.material.appbar.MaterialToolbar>
 
 
     <LinearLayout
-        android:id="@+id/linear_layout_register"
+        android:id="@+id/linear_layout_edit_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
@@ -49,10 +46,10 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/register_lastname_input"
+            android:id="@+id/edit_profile_name_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
@@ -62,14 +59,14 @@
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/register_lastname_text"
+                android:id="@+id/edit_profile_name_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/register_name_input"
+            android:id="@+id/edit_profile_lastname_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -79,16 +76,15 @@
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/register_name_text"
+                android:id="@+id/edit_profile_lastname_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/register_email_input"
+        android:id="@+id/edit_profile_email_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
@@ -98,60 +94,12 @@
         app:boxBackgroundColor="#00FFFFFF"
         app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_layout_register">
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_edit_profile">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/register_email_text"
+            android:id="@+id/edit_profile_email_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/register_pass_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="18dp"
-        android:layout_marginTop="18dp"
-        android:layout_weight="2"
-        android:hint="@string/hint_password"
-        app:boxBackgroundColor="#00FFFFFF"
-        app:errorEnabled="true"
-        app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_email_input">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/register_pass_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/register_repeatpass_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="18dp"
-        android:layout_marginTop="18dp"
-        android:layout_weight="2"
-        android:hint="@string/hint_repeat_pass"
-        app:boxBackgroundColor="#00FFFFFF"
-        app:errorEnabled="true"
-        app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_pass_input">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/register_repeatpass_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
-
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
