--- a/App-Movil/app/src/main/res/layout/fragment_create_task.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_create_task.xml
@@ -42,7 +42,6 @@
             app:boxBackgroundColor="#00FFFFFF"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskReturnButton">
 
@@ -71,13 +70,24 @@
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Spinner
-            android:id="@+id/fragmentCreateTaskCategoriesSpinner"
+        <TextView
+            android:id="@+id/fragmentCreateTaskCategoriesText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:entries="@array/arr_categories"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskDescInputLayout"
+            android:text="@string/label_category"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskDescInputLayout" />
+
+        <Spinner
+            android:id="@+id/fragmentCreateTaskCategoriesSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskCategoriesText"
             tools:layout_editor_absoluteX="0dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
