--- a/App-Movil/app/src/main/res/layout/layout_task_item.xml
+++ b/App-Movil/app/src/main/res/layout/layout_task_item.xml
@@ -10,12 +10,12 @@
     android:orientation="horizontal">
 
 
-    <com.google.android.material.textview.MaterialTextView
+    <Button
         android:id="@+id/taskItemCategory"
-        android:layout_width="80dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:text=""
         android:textSize="20sp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +23,7 @@
         android:id="@+id/taskItemTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         android:gravity="center"
         android:text=""
         android:textColor="#000000"
