Reminder Activity created and Singleton applied to  classes

--- a/App-Movil/app/src/main/res/layout/fragment_task.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_task.xml
@@ -6,7 +6,7 @@
     android:id="@+id/fragmentTaskFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.TaskFragment">
+    tools:context=".fragment.task.TaskFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
