Boton 'Logout' arreglado

--- a/App-Web/src/containers/Admin/Admin.scss
+++ b/App-Web/src/containers/Admin/Admin.scss
@@ -36,7 +36,7 @@
   .logoutBtn {
     vertical-align: middle;
     float: right;
-    width: 13vw;
+    width: 180px;
     margin: 0 auto;
     color: black;
     text-align: center;
