Se abre la cámara para tomar una foto a la hora de subir una foto para las tareas

--- a/App-Movil/app/src/main/res/layout/fragment_create_task.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_create_task.xml
@@ -103,14 +103,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskCategoriesSpinner" />
 
+            <TextView
+                android:id="@+id/fragmentCreateTaskFileName"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskSelectImageButton" />
+
             <ImageView
                 android:id="@+id/fragmentCreateTaskImageToUpload"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskSelectImageButton" />
+                app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskFileName" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
