--- a/App-Movil/app/src/main/res/layout/fragment_create_task.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_create_task.xml
@@ -131,9 +131,21 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/label_no_media_selected"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskRecordVideoButton" />
+
+            <Button
+                android:id="@+id/fragmentCreateTaskViewVideoButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/label_view_video"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskFileName"/>
 
             <ImageView
                 android:id="@+id/fragmentCreateTaskImageToUpload"
@@ -141,6 +153,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskFileName" />
@@ -148,8 +161,10 @@
             <VideoView
                 android:id="@+id/fragmentCreateTaskVideoToUpload"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="500dp"
+                android:visibility="gone"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragmentCreateTaskImageToUpload"/>
