Cambiado el diseño de la lista de tareas y recordatorios

--- a/App-Movil/app/src/main/res/layout/fragment_reminder.xml
+++ b/App-Movil/app/src/main/res/layout/fragment_reminder.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C3C3C3"
     tools:context=".fragment.reminder.ReminderFragment">
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -14,44 +15,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <com.applandeo.materialcalendarview.CalendarView
+                android:id="@+id/reminderFragmentCalendar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:type="one_day_picker"
+                app:headerColor="@color/colorPrimaryDark"
+                app:selectionColor="@color/colorPrimary"
+                app:eventsEnabled="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <Button
                 android:id="@+id/fragmentNewReminderButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|top"
-                android:layout_margin="10dp"
                 android:background="@color/colorPrimary"
                 android:src="@drawable/ic_add_black_24dp"
                 android:text="@string/label_create_reminder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.applandeo.materialcalendarview.CalendarView
-                android:id="@+id/reminderFragmentCalendar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                app:type="one_day_picker"
-                app:headerColor="@color/colorPrimary"
-                app:selectionColor="@color/colorPrimary"
-                app:eventsEnabled="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/fragmentNewReminderButton" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/fragmentReminderListTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/label_reminder"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reminderFragmentCalendar"/>
+                app:layout_constraintTop_toBottomOf="@+id/reminderFragmentCalendar" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/fragmentReminderRecycler"
@@ -60,7 +46,7 @@
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/fragmentReminderListTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/fragmentNewReminderButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
