--- a/App-Movil/app/src/main/res/layout/layout_task_item.xml
+++ b/App-Movil/app/src/main/res/layout/layout_task_item.xml
@@ -5,28 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_margin="10dp"
+    android:background="#FFFFFF"
     android:orientation="horizontal">
-
-
-    <Button
-        android:id="@+id/taskItemCategory"
-        android:layout_width="50dp"
-        android:layout_height="match_parent"
-        android:textSize="20sp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/taskItemTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="80dp"
         android:gravity="center"
+        android:layout_marginStart="10dp"
+        android:shadowColor="#000000"
         android:text=""
         android:textColor="#000000"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/taskItemCategory"
+        app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
